--- a/API_Products/package.json
+++ b/API_Products/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
+    "axios": "^1.6.8",
     "express": "^4.19.2"
   },
   "name": "api_products",
   "version": "0.0.1",
   "main": "index.js",
-  "type":"module",
-  "devDependencies": {},
+  "type": "module",
   "scripts": {
     "dev": "node ./app",
     "test": "echo \"Error: no test specified\" && exit 1"
