--- a/API_Products/package.json
+++ b/API_Products/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "axios": "^1.6.8",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql2": "^3.9.7"
   },
   "name": "api_products",
   "version": "0.0.1",
